RESOLVED FIXED180223
[Simple line layout] Incorrect repaint rect with vertically shrinking content and bottom-padding
https://bugs.webkit.org/show_bug.cgi?id=180223
Summary [Simple line layout] Incorrect repaint rect with vertically shrinking content...
alan
Reported 2017-11-30 15:48:48 PST
Attachments
Patch (4.28 KB, patch)
2017-11-30 15:55 PST, alan
no flags
alan
Comment 1 2017-11-30 15:55:12 PST
WebKit Commit Bot
Comment 2 2017-11-30 18:54:33 PST
Comment on attachment 328046 [details] Patch Clearing flags on attachment: 328046 Committed r225379: <https://trac.webkit.org/changeset/225379>
WebKit Commit Bot
Comment 3 2017-11-30 18:54:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.