Source/WebCore: [Simple line layout] Incorrect repaint rect with vertically shrinking content and bottom-padding. https://bugs.webkit.org/show_bug.cgi?id=180223 <rdar://problem/34122210>

Reviewed by Simon Fraser.

Repaint rect should be extended all the way to bottom border/padding.

Test: fast/repaint/simple-line-layout-shrinking-content.html

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutSimpleLines):

LayoutTests:
[Simple line layout] Incorrect repaint rect with vertically shrinking content.
https://bugs.webkit.org/show_bug.cgi?id=180223
<rdar://problem/34122210>

Reviewed by Simon Fraser.

* fast/repaint/simple-line-layout-shrinking-content-expected.txt: Added.
* fast/repaint/simple-line-layout-shrinking-content.html: Added.


Canonical link: https://commits.webkit.org/196229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225379 268f45cc-cd09-0410-ab3c-d52691b4dbfc